--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,8 +25,13 @@ jobs:
       run: |
         go get -v -t -d ./...
 
-    - name: Build
-      run: make build
-
     - name: Test
       run: make test
+
+    - name: Run GoReleaser
+      uses: goreleaser/goreleaser-action@v1
+      with:
+        version: latest
+        args: release --rm-dist
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
